application refactor
